logs/torngas.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/torngas'...
Compiling './lib/python3.5/site-packages/torngas/application.py'...
***   File "./lib/python3.5/site-packages/torngas/application.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torngas/cache'...
Listing './lib/python3.5/site-packages/torngas/cache/backends'...
Listing './lib/python3.5/site-packages/torngas/db'...
Compiling './lib/python3.5/site-packages/torngas/db/basedb.py'...
***   File "./lib/python3.5/site-packages/torngas/db/basedb.py", line 126
    raise UnknownParamstyle, paramstyle
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torngas/db/dbalchemy.py'...
***   File "./lib/python3.5/site-packages/torngas/db/dbalchemy.py", line 155
    except ConfigError, ex:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torngas/decorators'...
Listing './lib/python3.5/site-packages/torngas/dispatch'...
Listing './lib/python3.5/site-packages/torngas/httpmodule'...
Compiling './lib/python3.5/site-packages/torngas/httpmodule/httpmodule.py'...
***   File "./lib/python3.5/site-packages/torngas/httpmodule/httpmodule.py", line 72
    except BaseException, ex:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torngas/logger'...
Listing './lib/python3.5/site-packages/torngas/middleware'...
Compiling './lib/python3.5/site-packages/torngas/middleware/manager.py'...
***   File "./lib/python3.5/site-packages/torngas/middleware/manager.py", line 115
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torngas/mixins'...
Compiling './lib/python3.5/site-packages/torngas/mixins/exception.py'...
***   File "./lib/python3.5/site-packages/torngas/mixins/exception.py", line 25
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torngas/resource'...
Compiling './lib/python3.5/site-packages/torngas/storage.py'...
***   File "./lib/python3.5/site-packages/torngas/storage.py", line 24
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torngas/template'...
Compiling './lib/python3.5/site-packages/torngas/utils.py'...
***   File "./lib/python3.5/site-packages/torngas/utils.py", line 258
    raise ValueError, "Direction needs to be r or l."
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torngas-1.8.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
